many random changes

--- a/application/views/auth/modals/login.html
+++ b/application/views/auth/modals/login.html
@@ -1,6 +1,8 @@
 <div id="login-modal" class="modal fade">
-    <div class="modal-dialog">
+    <div class="">
         <div class="title">Many have used BookSquare to get their books</div>
+        <br>
+        <br>
         <div class="subtitle">Login to continue buying from us</div>
         <br>
         <div class="content-div">
@@ -13,7 +15,7 @@
                     </div>
                     <button type="submit" id="login-btn" class="btn-primary btn-lg">Log in</button>
                 </form>
-                <p class='forgot-password'><a href="account/password_reset/index.html">Forgot Password?</a></p>
+                
                 <p class='signup'>Don't have an account?
                     <br><a>Sign Up</a></p>
             </div>
