--- a/application/views/book/all.html
+++ b/application/views/book/all.html
@@ -75,7 +75,7 @@
                     <div class="col-md-4 col-md-pull-8">
                         <!-- books SEARCH : begin -->
                         <aside class="books-search">
-                            <h3 class="books-search-title">Search &amp; Filter</h3>
+                            <h3 class="books-search-title">Search</h3>
                             <!-- books SEARCH BASIC : begin -->
                             <div class="books-search-basic">
                                 <!-- FORM SWAP : begin -->
