front-end changes

--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -1,14 +1,4 @@
 
-<div id="banner">
-
-    <!-- BANNER BG : begin -->
-    <!-- <div class="banner-bg">
-        <div class="banner-bg-item"></div>
-    </div> -->
-    <!-- BANNER BG : end -->
-
-   
-</div>
 <!-- BANNER : end -->
 
 <!-- CORE : begin -->
@@ -48,7 +38,7 @@
             <!-- ABOUT WIDGET : begin -->
             <div class="widget about-widget">
                 <div class="widget-content">
-                    <img src="{echo CDN}base/mainlogo.png">
+                    <img src="{echo CDN}base/mainlogo.jpg">
                 </div>
                 <div class="contact">
                     <p><i class="fa fa-whatsapp"></i> +91-9582135023</p>
