--- a/application/views/layouts/nav/standard.html
+++ b/application/views/layouts/nav/standard.html
@@ -40,7 +40,7 @@
         <div class="header-inner clearfix">
             <!-- HEADER BRANDING : begin -->
             <div class="header-branding">
-                <a href="index.html@ref=logo.html"><img src="{echo CDN}base/mainlogo.png"></a>
+                <a href="index.html@ref=logo.html"><img src="{echo CDN}base/mainlogo.jpg"></a>
             </div>
             <!-- HEADER BRANDING : end -->
             
