--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -34,18 +34,10 @@
             <div class="row">
                 <div class="col-sm-8">
                     <!-- FOOTER TEXT : begin -->
-                    <p>Copyright 2015 &copy; BookSquare. All rights reserved</p>
+                    <p>Copyright 2015 &copy; . All rights reserved</p>
                     <!-- FOOTER TEXT : end -->
                 </div>
-                <div class="col-sm-4">
-                    <!-- FOOTER SOCIAL : begin -->
-                    <ul class="footer-social custom-list">
-                        <li><a target="_blank" href="https://www.facebook.com/booksquareindia/" title="Facebook"><i class="fa fa-facebook-square"></i><span>Facebook</span></a></li>
-                        <li><a target="_blank" href="https://twitter.com/booksquareindia" title="Twitter"><i class="fa fa-twitter-square"></i><span>Twitter</span></a></li>
-                        <li><a target="_blank" href="https://plus.google.com/u/0/+BooksquareIndia/posts" title="Google+"><i class="fa fa-google-plus-square"></i><span>Google+</span></a></li>
-                    </ul>
-                    <!-- FOOTER SOCIAL : end -->
-                </div>
+                
             </div>
         </div>
     </footer>
